# discord-bot

./: .env.example  Dockerfile  docker-compose.yml  init.sql  pyproject.toml
src/discord_bot/: alchemy.py  app.py  blacksmith.py  cooking.py  database.py  enchanting.py  engineering.py  first_aid.py  fishing.py  herbalism.py  leatherworking.py  mining.py  profession.py  profession_recipes.py  rogue_poisons.py  search.py  tailoring.py
