[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Johan Saarsoo <johan@saarsoo.se>"]

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
